# amplifier-app-newtui

./: .gitignore  AGENTS.md  NOTES-chrome-composer-footer.md  NOTES-commands.md  NOTES-contracts.md  NOTES-demo.md  NOTES-flows.md  NOTES-goldens-perf.md  NOTES-kernel-runtime.md  NOTES-kernel.md  NOTES-overlays.md  NOTES-transcript.md  README.md  bundle.md  pyproject.toml  pyrightconfig.json
.ai/: tui-findings.md
.github/workflows/: ci.yml  pr-title.yml
amplifier_app_newtui/: __init__.py  main.py
amplifier_app_newtui/commands/: __init__.py  builtin.py  context.py  doctor.py  improve.py  registry.py
amplifier_app_newtui/kernel/: approval.py  config.py  cost.py  demo.py  events.py  git_yield.py  governance_hook.py  persistence.py  queue_bridge.py  runtime.py  spawner.py  steering.py
amplifier_app_newtui/kernel/trackers/: __init__.py  runtime_status.py  stream_status.py  task_status.py
amplifier_app_newtui/model/: blocks.py  lanes.py  modes.py  queues.py  trust.py  turn.py
amplifier_app_newtui/ui/: app.py  app_support.py  approval_bar.py  chrome.py  command_context.py  composer.py  demo_wiring.py  footer.py  keymap.py  lanes_panel.py  live_tail.py  needs_you.py  notices.py  palette.py  reducer.py  rewind_strip.py  runtime_adapter.py  term_probe.py  themes.py  transcript.py
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN-SPEC.md  DEVELOPMENT.md  RESEARCH-BRIEF.md  SETTINGS.md  USER-GUIDE.md  design-v3-cohesive.html  tui-v3-cohesive.md
docs/audits/: README.md  lane1-commands.md  lane2-safeguards.md  lane3-runtime.md
docs/decisions/: ADR-0005-interaction-modes-and-trust-postures.md  ADR-0006-full-screen-pinned-interactive-shell.md  ADR-0007-newtui-ground-up-architecture.md
docs/diagrams/: newtui-amplifier-integration.dot  newtui-architecture.dot  newtui-dataflow.dot
docs/plans/: 2026-07-20-anchors-migration-implementation.md  2026-07-21-ambient-progress-design.md  2026-07-21-ambient-progress-phase1-plan-panel.md  2026-07-21-ambient-progress-phase2-delegate-summary.md  2026-07-21-ambient-progress-phase3-live-tail.md  2026-07-22-amplifier-agent-eval.md  2026-07-22-anchors-pin-lifecycle.md  2026-07-22-forge-capability-tier.md  2026-07-22-governance-exec-default-posture.md  2026-07-22-lane-todo-surfacing.md  2026-07-22-self-improvement-loop.md  README.md
pipelines/: PROMPT.md  README.md  backlog.bundle.md  backlog.dot  categories.tsv  gene-transfer.bundle.md  gene-transfer.dot  ledger.py  ledger.tsv
scripts/: forge_capability.sh  regen_screenshot.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/amplifier_newtui_sdk/: __init__.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/test/: client.test.ts
src/amplifier_app_newtui/: main.py
src/amplifier_app_newtui/commands/: __init__.py  builtin.py  context.py  copy.py  doctor.py  export.py  improve.py  permissions.py  registry.py  skills.py
src/amplifier_app_newtui/kernel/: __init__.py  approval.py  bundle_admin.py  clipboard.py  compaction.py  config.py  config_ops.py  cost.py  demo.py  directory_permissions.py  display.py  events.py  evidence.py  file_mentions.py  git_yield.py  governance_hook.py  jsonl.py  mcp_config.py  mention_expansion.py  notify_admin.py  persistence.py  queue_bridge.py  recipes.py  reset.py  rewind.py  routing_admin.py  runtime.py  safety.py  session_factory.py  session_manager.py  session_ops.py  setup.py  source_admin.py  spawner.py  steering.py  surface_hint.py  tool_cli.py  turn_yield.py  updater.py
src/amplifier_app_newtui/model/: __init__.py  blocks.py  config.py  evidence.py  formatting.py  injection.py  lanes.py  modes.py  queues.py  redaction.py  terminal.py  trust.py  turn.py
src/amplifier_app_newtui/ui/: __init__.py  app.py  app_support.py  approval_bar.py  chrome.py  command_context.py  composer.py  config_admin.py  config_view.py  demo_wiring.py  directory_admin.py  file_mentions.py  footer.py  keymap.py  lane_reducer.py  (+17 more)
tests/: conftest.py  test_app_boot.py  test_bundle_agents.py  test_bundle_cli.py  test_command_context_app.py  test_command_context_contract.py  test_commands_builtin.py  test_commands_context.py  test_commands_copy.py  test_commands_doctor.py  test_commands_export.py  test_commands_improve.py  test_commands_permissions.py  test_commands_registry.py  test_commands_skills.py  test_cost_parity_appcli.py  test_directory_cli.py  test_directory_permissions.py  test_flow_approval.py  test_flow_helpers.py  test_flow_interrupt.py  test_flow_lanes.py  test_flow_ledger.py  test_flow_modes.py  test_flow_open_registry.py  test_flow_palette.py  test_flow_plan_panel.py  test_flow_rewind.py  test_flow_skill_aliases.py  test_flow_steer_queue.py  test_fork_directive.py  test_golden_widths.py  test_init_cli.py  test_interrupt_marker.py  test_kernel_approval.py  test_kernel_approval_governance.py  test_kernel_bundle_admin.py  test_kernel_clipboard.py  test_kernel_config_ops.py  test_kernel_cost.py  (+106 more)
tests/forge/: __init__.py  _forge.py  _ledger.py  conftest.py  test_capability_demo.py  test_capability_real.py
tests/goldens/: regen.py  transcript_w120.txt  transcript_w40.txt  transcript_w80.txt  transcript_w97.txt
(+11 files in other folders)
